--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   }).addTo(map);
 
   const bikeIcon = L.icon({
-    iconUrl: 'https://cdn-icons-png.flaticon.com/512/2972/2972185.png',
+    iconUrl: 'https://cdn-icons-png.flaticon.com/512/929/929471.png',
     iconSize: [40, 40],
     iconAnchor: [20, 40],
     popupAnchor: [0, -40],
