--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </style>
 </head>
 <body>
-  <h1>  機盜了啦-機車防竊追蹤系統</h1>
+  <h1><p>機盜了啦-機車防竊追蹤系統</p></h1>
   <div id="map"></div>
   <div class="controls">
     <button id="refresh-btn">🔄 更新位置</button>
