--- a/index.html
+++ b/index.html
@@ -6,68 +6,88 @@
     <title>機車防竊追蹤系統</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
-        h1 {
-    position: absolute;
-    top: 15px;
-    left: 100px; /* 往右移，避免被遮住 */
-    margin: 0;
-    font-size: 22px;
-    font-weight: bold;
-    color: white;
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
-    z-index: 1000;
-    background: rgba(0, 0, 0, 0.4); /* 半透明背景讓字更清楚 */
-    padding: 6px 12px;
-    border-radius: 8px;
-  }
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
             padding: 0;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background-color: #121212;
+            color: white;
+            overflow: hidden;
+        }
+        h1 {
+            position: absolute;
+            top: 15px;
+            left: 20px;
+            margin: 0;
+            font-size: 22px;
+            font-weight: bold;
+            color: white;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.7);
+            z-index: 1000;
         }
         #map {
-            height: 500px;
+            height: 100vh;
             width: 100%;
         }
         .controls {
-            margin: 10px;
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0,0,0,0.7);
+            padding: 12px 20px;
+            border-radius: 16px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+            z-index: 1000;
         }
         button {
-            margin: 5px;
-            padding: 8px 15px;
-            font-size: 16px;
+            background: linear-gradient(135deg, #ff4b2b, #ff416c);
+            border: none;
+            padding: 10px 18px;
+            border-radius: 12px;
+            color: white;
+            font-size: 15px;
             cursor: pointer;
+            font-weight: 500;
+            transition: all 0.2s ease-in-out;
+        }
+        button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 10px rgba(255, 65, 108, 0.6);
+        }
+        button.active {
+            background: linear-gradient(135deg, #00c853, #00e676);
+            box-shadow: 0 4px 10px rgba(0, 230, 118, 0.6);
         }
         #last-update {
-            font-size: 14px;
-            color: gray;
+            font-size: 13px;
+            color: #ccc;
         }
     </style>
 </head>
 <body>
-    <h1>機盜了啦-機車防盜系統</h1>
+    <h1>🏍 機車防竊追蹤</h1>
     <div id="map"></div>
     <div class="controls">
-        <button id="refresh-btn">更新位置</button>
-        <button id="locate-btn">顯示我的位置</button>
+        <button id="refresh-btn">🔄 更新位置</button>
+        <button id="locate-btn">📍 顯示我的位置</button>
+        <button id="toggle-path-btn" class="active">🛣 隱藏軌跡線</button>
         <p>最後更新時間：<span id="last-update">無資料</span></p>
     </div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
-        // Firebase Realtime Database URL (修改成你的資料庫 URL)
         const firebaseUrl = "https://moto-anti-theft-default-rtdb.asia-southeast1.firebasedatabase.app/alerts.json";
 
-        // 初始化地圖
         const map = L.map('map').setView([25.0476, 121.5174], 15);
-
-        // 添加地圖圖層
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
-        // 機車圖示
         const bikeIcon = L.icon({
             iconUrl: 'https://cdn-icons-png.flaticon.com/512/2972/2972185.png',
             iconSize: [40, 40],
@@ -79,49 +99,40 @@
             .addTo(map)
             .bindPopup("<b>您的機車</b>");
 
-        // 用於儲存軌跡點
         let bikePath = [];
-        let polyline = L.polyline([], { color: 'red', weight: 4 }).addTo(map);
+        let polyline = L.polyline([], { color: '#ff416c', weight: 4 }).addTo(map);
+        let pathVisible = true;
 
-        // 從 Firebase 取得最新位置與歷史軌跡
         async function updateBikeLocation() {
             try {
                 const res = await fetch(firebaseUrl);
                 const data = await res.json();
-
-                if (!data) {
-                    console.log("Firebase 沒有資料");
-                    return;
-                }
+                if (!data) return;
 
                 const records = Object.values(data);
-
-                // 更新軌跡點
                 bikePath = records
                     .filter(r => r.lat && r.lon)
                     .map(r => [r.lat, r.lon]);
 
                 if (bikePath.length > 0) {
-                    // 更新最新位置
                     const latest = bikePath[bikePath.length - 1];
                     bikeMarker.setLatLng(latest);
                     map.setView(latest);
-                    polyline.setLatLngs(bikePath);
+
+                    if (pathVisible) {
+                        polyline.setLatLngs(bikePath);
+                    }
 
                     const lastRecord = records[records.length - 1];
                     document.getElementById('last-update').textContent = lastRecord.timestamp || new Date().toLocaleString();
-                } else {
-                    console.log("資料沒有有效經緯度");
                 }
             } catch (err) {
                 console.error("取得 Firebase 資料錯誤:", err);
             }
         }
 
-        // 更新位置按鈕
         document.getElementById('refresh-btn').addEventListener('click', updateBikeLocation);
 
-        // 定位使用者位置
         document.getElementById('locate-btn').addEventListener('click', function () {
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(
@@ -129,9 +140,7 @@
                         const userLat = position.coords.latitude;
                         const userLng = position.coords.longitude;
 
-                        if (window.userMarker) {
-                            map.removeLayer(window.userMarker);
-                        }
+                        if (window.userMarker) map.removeLayer(window.userMarker);
 
                         const userIcon = L.icon({
                             iconUrl: 'https://cdn-icons-png.flaticon.com/512/447/447031.png',
@@ -159,10 +168,20 @@
             }
         });
 
-        // 每 30 秒自動更新位置
-        setInterval(updateBikeLocation, 30000);
+        document.getElementById('toggle-path-btn').addEventListener('click', function () {
+            pathVisible = !pathVisible;
+            if (pathVisible) {
+                polyline.setLatLngs(bikePath);
+                this.textContent = "🛣 隱藏軌跡線";
+                this.classList.add("active");
+            } else {
+                polyline.setLatLngs([]);
+                this.textContent = "🛣 顯示軌跡線";
+                this.classList.remove("active");
+            }
+        });
 
-        // 頁面載入立即抓一次
+        setInterval(updateBikeLocation, 30000);
         updateBikeLocation();
     </script>
 </body>
