--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </style>
 </head>
 <body>
-    <h1>機車防竊追蹤系統</h1>
+    <h1>機盜了啦-機車防盜系統</h1>
     <div id="map"></div>
     <div class="controls">
         <button id="refresh-btn">更新位置</button>
