--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: 'Segoe UI', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #f0f4ff, #d9e4ff);
+            background: linear-gradient(135deg, #0000, #d9e4ff);
             display: flex;
             flex-direction: column;
             align-items: center;
