--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: 'Segoe UI', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #00000000, #000000);
+            background: linear-gradient(135deg, #000000);
             display: flex;
             flex-direction: column;
             align-items: center;
