--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         h1 {
             margin: 20px 0 10px;
-            color: #333;
+            color: #ffffff;
             font-weight: 700;
             letter-spacing: 1px;
         }
