--- a/index.html
+++ b/index.html
@@ -6,64 +6,66 @@
     <title>機車防竊追蹤系統</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
-        body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #000000);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        h1 {
-            margin: 20px 0 10px;
-            color: #ffffff;
-            font-weight: 700;
-            letter-spacing: 1px;
-        }
-        #map {
-            height: 500px;
-            width: 90%;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-            margin-bottom: 15px;
-        }
-        .controls {
-            background: white;
-            border-radius: 12px;
-            padding: 15px 20px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        button {
-            background-color: #4A90E2;
-            border: none;
-            border-radius: 8px;
-            padding: 10px 18px;
-            color: white;
-            font-size: 15px;
-            cursor: pointer;
-            transition: background 0.3s, transform 0.2s;
-        }
-        button:hover {
-            background-color: #357ABD;
-            transform: translateY(-2px);
-        }
-        button:active {
-            transform: translateY(0);
-        }
-        #last-update {
-            font-size: 14px;
-            color: gray;
-            margin-top: 5px;
-            flex-basis: 100%;
-            text-align: center;
-        }
-    </style>
+    body {
+        font-family: 'Segoe UI', Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #E0DED7; /* 莫蘭迪淺灰米色背景 */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    h1 {
+        margin: 20px 0 10px;
+        color: #6B5B5B; /* 莫蘭迪深灰褐色 */
+        font-weight: 700;
+        letter-spacing: 1px;
+    }
+    #map {
+        height: 500px;
+        width: 90%;
+        border-radius: 15px;
+        box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+        margin-bottom: 15px;
+        border: 2px solid #C0BEB5; /* 莫蘭迪灰邊框 */
+    }
+    .controls {
+        background: #F3F1ED; /* 莫蘭迪奶油色 */
+        border-radius: 12px;
+        padding: 15px 20px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+        margin-bottom: 20px;
+    }
+    button {
+        background-color: #A69F9F; /* 莫蘭迪灰紫色 */
+        border: none;
+        border-radius: 8px;
+        padding: 10px 18px;
+        color: #F3F1ED; /* 文字淺色對比 */
+        font-size: 15px;
+        cursor: pointer;
+        transition: background 0.3s, transform 0.2s;
+    }
+    button:hover {
+        background-color: #8C8585; /* 莫蘭迪深灰紫色 */
+        transform: translateY(-2px);
+    }
+    button:active {
+        transform: translateY(0);
+    }
+    #last-update {
+        font-size: 14px;
+        color: #7A7A7A; /* 莫蘭迪灰色 */
+        margin-top: 5px;
+        flex-basis: 100%;
+        text-align: center;
+    }
+</style>
+
 </head>
 <body>
     <h1>機盜了啦-機車防盜系統</h1>
