--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>機車防竊追蹤系統</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
+    /* 全域字體改成圓體 */
     body {
-        font-family: 'Segoe UI', Arial, sans-serif;
+        font-family: 'Noto Sans TC', 'Microsoft JhengHei UI', 'PingFang TC', 'Helvetica', 'Arial', sans-serif;
         margin: 0;
         padding: 0;
         background: #E0DED7; /* 莫蘭迪淺灰米色背景 */
@@ -20,6 +21,7 @@
         color: #6B5B5B; /* 莫蘭迪深灰褐色 */
         font-weight: 700;
         letter-spacing: 1px;
+        font-family: inherit; /* 繼承圓體 */
     }
     #map {
         height: 500px;
@@ -31,31 +33,37 @@
     }
     .controls {
         background: #F3F1ED; /* 莫蘭迪奶油色 */
-        border-radius: 12px;
-        padding: 15px 20px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+        border-radius: 15px;
+        padding: 20px 25px;
+        box-shadow: 0 6px 20px rgba(0,0,0,0.08);
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 10px;
-        margin-bottom: 20px;
+        gap: 12px;
+        margin-bottom: 25px;
+        font-family: inherit; /* 繼承圓體 */
     }
     button {
         background-color: #A69F9F; /* 莫蘭迪灰紫色 */
         border: none;
-        border-radius: 8px;
-        padding: 10px 18px;
+        border-radius: 25px; /* 圓潤按鈕 */
+        padding: 12px 22px;
         color: #F3F1ED; /* 文字淺色對比 */
-        font-size: 15px;
+        font-size: 16px; /* 稍大文字 */
+        font-weight: 500;
         cursor: pointer;
-        transition: background 0.3s, transform 0.2s;
+        transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
+        font-family: inherit; /* 繼承圓體 */
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     button:hover {
         background-color: #8C8585; /* 莫蘭迪深灰紫色 */
         transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
     button:active {
         transform: translateY(0);
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     #last-update {
         font-size: 14px;
@@ -63,8 +71,10 @@
         margin-top: 5px;
         flex-basis: 100%;
         text-align: center;
+        font-family: inherit; /* 繼承圓體 */
     }
 </style>
+
 
 </head>
 <body>
