--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>機車防竊追蹤系統</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
+
     <style>
     /* 全域字體改成圓體 */
     body {
-        font-family: 'Noto Sans TC', 'Microsoft JhengHei UI', 'PingFang TC', 'Helvetica', 'Arial', sans-serif;
+        font-family: 'Noto Sans TC', 'Microsoft JhengHei UI', 'PingFang TC', sans-serif;
         margin: 0;
         padding: 0;
         background: #E0DED7; /* 莫蘭迪淺灰米色背景 */
