--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #d6cbc1, #c7d2d0); /* 莫蘭迪色背景 */
+            background: linear-gradient(135deg, #d6cbc1); /* 莫蘭迪色背景 */
             display: flex;
             flex-direction: column;
             align-items: center;
