--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </style>
 </head>
 <body>
-    <h1>機盜了啦-機車防盜系統</h1>
+    <h1><b>機盜了啦-機車防盜系統</b></h1>
     <div id="map"></div>
     <div class="controls">
         <button id="refresh-btn">更新位置</button>
